# RARL

./: README.md  quantitive_test_adversarial_v2.py  stra_rl_config.py  stra_rl_environment.yaml  test.py  test_adversarial.py  train_stage_I.py  train_stage_II.py
Algorithm/: backbone.py  ppo_modified.py
Scenarios/: adversary_scenarios_generator_v3.py  spawn_npc.py
envs/: bev_env_ours.py
envs/utils/: bev_transformations.py  bev_utils.py  planner.py
settings/cad_gt_carla/: CMakeLists.txt  Readme.md  package.xml
settings/cad_gt_carla/launch/: cad_gt_carla.launch
settings/cad_gt_carla/src/: cad_gt_carla.cpp  cad_gt_carla_backup.cpp
settings/launch_configs/: dsb_objects.json  stra_rl_town02.launch
